2006-01-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc6.py (FC6Version.Method):  Fix test for opts
	attribute.

2007-01-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (KickstartCommand.__init__):  Add a
	dispatcher setting so command classes can still access data classes.
	(BaseVersion.registerHandler):  Don't overwrite command classes with
	an instance in the version object.

	* pykickstart/commands/fc4.py:  Data and command classes are now
	nested inside the version class.
	* pykickstart/commands/fc5.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.

2007-01-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (makeVersion):  Default to DEVEL.

	* pykickstart/commands/fc4.py:  Command -> KS for brevity.
	* pykickstart/commands/fc5.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.

2007-01-09  Chris Lumens  <clumens@redhat.com>

	* pykickstart/po/*:  Updated translations.

	* pykickstart/commands/*.py:  Rename everything from Handler to
	Version, as that seems to make more sense.
	* pykickstart/options.py:  Likewise.
	* pykickstart/parser.py:  Likewise.
	* pykickstart/version.py:  Likewise.
	* ksvalidator/validator:  Likewise.

2007-01-09  Chris Lumens  <clumens@redhat.com>

	* Merge in multiversion-branch (#189348).

2007-01-08  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* Merge from HEAD:  Updated translations.

2007-01-03  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* pykickstart/commands/base.py (BaseHandler.hasHandler):  Add a
	convenience method to see if there's a handler for a given command.

2006-12-22  Chris Lumens  <clumens@redhat.com>

	multiversion-branch:

	* pykickstart/commands/base.py (KickstartCommand.__init__):  Add a
	writePriority parameter to control the order commands get written out
	when __str__ methods are called.
	(BaseHandler.__str__):  Take writePriorities into account.